--- a/sources/templates/file_system/file_system.html
+++ b/sources/templates/file_system/file_system.html
@@ -1,4 +1,4 @@
-<div class="file_sys_container">
+<div class="file_sys_container" id="file_sys_container">
     <div class="file_sys_header">
         <div class="file_sys_side_button" id="file_sys_side_button">
             <img class="file_sys_side_icon" src="sources?filename=icons/menu.png">
@@ -16,7 +16,7 @@
     </div>
     <div class="file_sys_body">
         <div class="file_sys_menu">
-            <button class="file_sys_menu_button">+下载</button>
+            <button class="file_sys_menu_button clickable">+上传</button>
             <div class="file_sys_menu_label">
                 <span>菜单</span>
             </div>
@@ -24,7 +24,7 @@
                 <div class="file_sys_menu_icon">
                     <img src="/sources?filename=icons/all_file.png">
                 </div>
-                <a class="file_sys_menu_text">所有文件</a>
+                <a class="file_sys_menu_text clickable">所有文件</a>
             </div>
         </div>
         <div class="file_sys_panel">
@@ -56,5 +56,9 @@
                 </div>
             </div>
         </div>
+    </div>
+</div>
+<div class="file_add_container">
+    <div class="file_add_content">
     </div>
 </div>
