--- a/sources/templates/common/web_base.html
+++ b/sources/templates/common/web_base.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8"/>
     <title>六号盒子</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/styles.css')}}"/>
     <link rel="web icon" href="/sources?filename=icons/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/styles.css')}}"/>
 </head>
-<body class="{{body_class}}">
+<body class="block_transition {{body_class}}">
 
 {% block body_content %}
 <!-- 主体内容 -->
 {% endblock %}
 
+<script>
+
+</script>
 <script type="module" src="{{url_for('static', filename=js_file)}}"></script>
 </body>
 </html>
