--- a/sources/templates/common/login.html
+++ b/sources/templates/common/login.html
@@ -3,7 +3,7 @@
     <div class="login_logo">
         <img src="/sources?filename=icons/logo.png" class="login_logo_img">
     </div>
-    <form action="{{login_api}}" method="post" class="login_form" id="login_form">
+    <form class="login_form" id="login_form">
         <label for="account" class="login_label">帐号</label>
         <input type="text" id="account" name="account" required placeholder="请输入帐号" class="login_field_input" autocomplete="username">
         <label for="password" class="login_label">密码</label>
